# watchtower

./: .env.example  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
apps/: __init__.py
apps/api/: __init__.py  apps.py  authentication.py  serializers.py  urls.py  views.py
apps/core/: __init__.py  apps.py  context_processors.py
apps/vagt/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/vagt/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
docs/: api.md  deployment.md  models.md  views.md
locale/: .gitkeep
media/: .gitkeep
scripts/: calculate_version.py  entrypoint.sh  update_docker_compose.py  update_version_txt.py
static/css/: main.css
templates/: base.html
templates/registration/: login.html
templates/vagt/: board.html  index.html  log.html  profile.html
templates/vagt/controllers/: form.html  list.html
templates/vagt/docs/: index.html  page.html
templates/vagt/partials/: _audit_tooltip.html  _board_content.html  _board_rows.html  _controller_card.html  _controller_row.html  _shift_header.html  _status_buttons.html  _status_update_response.html  _undo_response.html  _undo_toast.html
